SONARJAVA-6666 Fix FP on S8924 when a non-Mockito method with the same name is in scope (#5834)